@@ -1,4 +1,6 @@
 DIST kbdd-0.1.tar.gz 10136 RMD160 6e67d0af2a44ef061844b8f0a37ccc21155b575f SHA1 ecd3c41e969b266f6625c4822eb059d0409e2635 SHA256 c410ceb72f7f38925fbcedb7352e1737375df5add26e16283e584bf540ebbacb
+DIST kbdd-0.2.tar.gz 204806 RMD160 7b7f9d1c9e253db03105f766187cc8ed0cafe351 SHA1 39be54380e7b6ef04e2393de22878adf193b1227 SHA256 fcc2abcf1d7af6e5229182c5928f70ff13b3abf340b3a01897515ee7eaaabca3
 EBUILD kbdd-0.1.ebuild 692 RMD160 ec8b2f9f1a3825a20be1717a8dae7ee42fb35591 SHA1 6fbddd48349e8615e1231dc33bf470a15501fcd6 SHA256 54fb32dc1984c646344ae76745811caee6d971d875dde3de7c7640596f8560e5
+EBUILD kbdd-0.2.ebuild 697 RMD160 08c9d721ab5fd2fc587f0cd06b44347c6da042e8 SHA1 e277c8250c4d0954b199602d57e59392290af550 SHA256 6920f10f9bf97dafc35d37004dd96b53addc96984a43dad93e5ebca1a137f27c
 MISC ChangeLog 357 RMD160 3418569fd08c814967e012b0c8cfe2a6bbf32143 SHA1 6f4d9f8da38ada5be75ae9a7c1388c736388658a SHA256 cda7910f6b0d1c8cf63d79b7bc632edca9d5ff322cd780c047c912160d0ffe12
 MISC metadata.xml 206 RMD160 604b3b37a7181642bea84a4a2fb80e19bcebc500 SHA1 9019cf613a32dff2ba690c00a7773399a8aee59c SHA256 7d8bae067c81fe500c34a108969aaa2983c2870bdd7a99ed09cfc3983a0c928c
