@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> +kbdd-0.2.ebuild:
+  Bump x11-misc/kbdd-0.2, with dbus support and own `install` target
+
   11 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> kbdd-0.1.ebuild:
   Fix `dodoc` warning for x11-misc/kbdd
 
